# iris_species_classifier

./: .env.ci  .env.example  .gitignore  AUTHORS  LICENSE  Makefile  README.md  pyproject.toml  requirements-ci.txt  requirements.txt
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yaml
.jupyter/: jupyter_notebook_config.py
.jupyter/templates/: analysis-template.ipynb
notebooks/: 01_eda.ipynb
scripts/: download_data.sh
src/: config.py  schemas.py
src/data/: load_data.py
src/model/: base_naive_bayes.py  gaussian_naive_bayes.py
tests/: conftest.py  test_gaussian_naive_bayes.py  test_load_data.py
