[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = "src"
minversion = "7.0"
addopts = "-ra -q --import-mode=importlib"
testpaths = [
    "tests",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
