[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = "src"
minversion = "7.0"
addopts = "-ra -q --import-mode=importlib"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
ignore_missing_imports = true
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = ["/src/config.py"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
