[tool.black]
line-length = 88
target-version = ['py312']
extend-exclude = '''
/(
    notebooks
)/
'''

[tool.isort]
profile = "black"
skip = ["notebooks"]

[tool.pytest.ini_options]
pythonpath = "src"
minversion = "7.0"
addopts = "-ra -q --import-mode=importlib"
testpaths = [
    "tests",
]

[tool.ruff]
exclude = [".jupyter", "notebooks"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
files = ["src", "tests"]
ignore_missing_imports = true
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "config"
ignore_errors = true


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
